# hsalpm

./: .gitignore  Alpm.hs  Main.hs  Pacman.hs  README  hsalpm.cabal
Alpm/: Base.hs  Database.hs  List.hs  List.hsc  Network.hs  Package.hs  Util.hs
System/Alpm/: Cache.hs  Core.hs  Database.chs  Options.chs  PkgCache.hs  StringLike.hs  Transaction.chs  Utils.hs
System/Alpm/Core/: Class.hs  Error.hs
System/Alpm/Internal/: Alpm.chs  Callbacks.chs  List.chs  Types.chs
System/Alpm/Unsafe/: Database.chs  Package.chs
examples/: Backup.hs  List.hs  Load.hs  Query.hs  Tests.hs  Update.hs
lib/: Alpm.hs  Main.hs
lib-old/: Alpm.hs
lib-old/Alpm/: Database.hs  Option.hs
lib/Alpm/: Base.hs  Callbacks.hs  Core.hs  Database.chs  Database.hs  List.chs  List.hsc  Monad.hs  Option.chs  Option.hs  Option.hsc  Options.chs  Package.chs  Package.hs  PkgCache.hs  StringLike.hs  Transaction.chs  Transaction.hs  Util.hs  Utils.hs
lib/Alpm/Core/: Class.hs  Error.hs
lib/Alpm/Internal/: Alpm.chs  Callbacks.chs  List.chs  Types.chs
lib/Alpm/Unsafe/: Database.chs  Package.chs
src/: Alpm.hs
src/Alpm/: Util.hs
