Name:              hsalpm
Version:           0.0.0
Synopsis:          A simple Haskell binding to libalpm
Author:            Simon Gomizelj
Maintainer:        Simon Gomizelj <simongmzlj@gmail.com>
Homepage:          https://github.com/simongmzlj/hsalpm
Bug-reports:       https://github.com/simongmzlj/hsalpm/issue
Category:          System
Build-type:        Simple
Cabal-version:     >=1.8

Library
  Exposed-modules:
    Alpm.Internal.Alpm
    Alpm.Internal.List
    Alpm.Internal.Types
    Alpm.Core
    Alpm.Database
    Alpm.Unsafe.Database
    Alpm.Unsafe.Package
    Alpm.PkgCache
    Alpm.Transaction
    Alpm.Options
    Alpm.Utils
  Extra-libraries:
    alpm
  Build-depends:
    base -any,
    containers -any,
    deepseq -any,
    mtl -any,
    time -any,
    unix -any
  Build-tools: c2hs
  Hs-source-dirs: lib
