Name:              hsalpm
Version:           0.0.0
Synopsis:          A simple Haskell binding to libalpm
Author:            Simon Gomizelj
Maintainer:        Simon Gomizelj <simongmzlj@gmail.com>
Homepage:          https://github.com/simongmzlj/hsalpm
Bug-reports:       https://github.com/simongmzlj/hsalpm/issue
Category:          System
Build-type:        Simple
Cabal-version:     >=1.8

Library
  Exposed-modules:
    System.Alpm.Core.Class
    System.Alpm.Core.Error
    System.Alpm.Internal.Types
    System.Alpm.Internal.Alpm
    System.Alpm.Internal.List
    System.Alpm.Internal.Callbacks
    System.Alpm.Core
    System.Alpm.Database
    System.Alpm.Unsafe.Database
    System.Alpm.Unsafe.Package
    System.Alpm.PkgCache
    System.Alpm.Transaction
    System.Alpm.Options
    System.Alpm.StringLike
    System.Alpm.Utils
  Extra-libraries:
    alpm
  Build-depends:
    base -any,
    containers -any,
    bytestring -any,
    text -any,
    mtl -any,
    time -any,
    unix -any
  Build-tools: c2hs
